# job-counter-blueprint

./: Cargo.toml  README.md
job-counter-bin/: Cargo.toml
job-counter-bin/src/: main.rs
job-counter-lib/: Cargo.toml
job-counter-lib/src/: context.rs  error.rs  lib.rs  storage.rs
job-counter-lib/src/jobs/: get_stats.rs  mod.rs  process_data.rs  reset_counter.rs
