[workspace]
members = ["job-counter-bin", "job-counter-lib"]
resolver = "2"

[workspace.dependencies]
blueprint-sdk = { version = "0.1", features = ["tangle", "macros", "testing"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
